# netuno

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sample.nt  single-exec.py
nil/: CMakeLists.txt
nil/include/netuno/: nir._  str.h  table.h
nil/include/netuno/nil/: argument.h  basic_block.h  binary.h  constant.h  context.h  debug.h  function.h  instruction.h  module.h  type.h  value.h
nil/source/: CMakeLists.txt  argument.c  array.c  basic_block.c  context.c  function.c  instruction.c  list.c  memory.c  module.c  pargument.h  pconstant.h  pfunction.h  pmodule.h  pstring.h  ptype.h  str.c  string.c  type.c  value.c
nil/source/nil/: basic_block.c  colors.h  constant.c  context.c  function.c  instruction.c  module.c  pbasic_block.h  pcontext.h  pfunction.h  pinstruction.h  plist.h  ptype.h  pvalue.h  value.c
nir/: .clang-format  CMakeLists.txt
nir/include/netuno/: array.h  memory.h  nir._  str.h  string.h  varint.h
nir/include/netuno/nir/: argument.h  basic_block.h  constant.h  context.h  debug.h  function.h  instruction.h  module.h  type.h  value.h
nir/source/: CMakeLists.txt  array.c  nir._  str.c  table.c
nir/source/nir/: argument.c  basic_block.c  colors.h  constant.c  context.c  function.c  instruction.c  list.c  module.c  pargument.h  pbasic_block.h  pconstant.h  pcontext.h  pfunction.h  pinstruction.h  plist.h  pmodule.h  ptype.h  pvalue.h  type.c  value.c
nlib/: CMakeLists.txt
nlib/include/netuno/: array.h  common.h  table.h  trie.h
nlib/source/: CMakeLists.txt  path.c  trie.c
ntc/: CMakeLists.txt
ntc/exc/: CMakeLists.txt  main.c
ntc/include/netuno/: ntc.h
ntc/source/: CMakeLists.txt  class.inc  codegen.c  codegen.h  keywords.inc  kind.inc  list.c  list.h  literal.inc  netuno.c  nil_codegen.c  nil_codegen.h  nir_codegen.c  nir_codegen.h  parser.c  parser.h  path.c  path.h  report.c  report.h  resolver.c  resolver.h  scanner.c  scanner.h  scope.c  scope.h  trie.c  trie.h  type.c  type.h  vstack.c  vstack.h
ntc/source/modules/: console.c  console.h  helper.h  numbers.c  numbers.h  string.c  string.h
ntr/: CMakeLists.txt
ntr/include/netuno/: array.h  array_object.h  assembly.h  common.h  console.h  custom_type.h  debug.h  delegate.h  function.h  gc.h  memory.h  module.h  native.h  nto.h  object.h  opcode.h  opcode.inc  std.h  str.h  string.h  symbol.h  table.h  type.h  value.h  varint.h  vm.h
ntr/source/: CMakeLists.txt  array.c  array_object.c  assembly.c  console.c  debug.c  delegate.c  gc.c  memory.c  module.c  native.c  nto.c  object.c  std.c  str.c  string.c  symbol.c  table.c  varint.c  vm.c
tests/: 0000.nt  0001.nt  0002.nt  0003.nt  0005.nt  0006.nt  0007.nt  0008.nt  0010.nt  0011.nt  0020.nt  0021.nt  0026.nt  0027.nt  0028.nt  0029.nt  0030.nt  0033.nt  0034.nt  0035.nt  0036.nt
