cmake_minimum_required(VERSION 3.0.0)
project(netuno VERSION 0.1.0)

set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(MSVC)
    add_compile_options(
        /MP
        $<$<CONFIG:DEBUG>:/W4>
        $<$<CONFIG:DEBUG>:/WX>)
else()
    add_compile_options(
        $<$<CONFIG:DEBUG>:-Wall>
        $<$<CONFIG:DEBUG>:-Wextra>
        $<$<CONFIG:DEBUG>:-pedantic>
        $<$<CONFIG:DEBUG>:-Werror>
        $<$<CONFIG:DEBUG>:-Wno-implicit-fallthrough>
        $<$<CONFIG:DEBUG>:-Wno-type-limits>
        $<$<CONFIG:RELEASE>:-O3>)
endif()

set(NT_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
set(OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(ntc)

add_subdirectory(ntr)
add_subdirectory(nlib)
add_subdirectory(nil)
